# Simple-Engine

./: CMakeLists.txt  ShaderCompiler.hpp  main.cpp  main_00.cpp  main_01.cpp
00_clear_screen/: CMakeLists.txt  main.cpp
01_gui/: CMakeLists.txt  main.cpp
02_triangle/: Pipeline.cpp  Pipeline.hpp  defines.hpp  main.cpp  vulkan_state.json
__vsync/: CMakeLists.txt  FrameResources.cpp  FrameResources.hpp  Pipeline.cpp  Pipeline.hpp  Stats.cpp  Stats.hpp  main.cpp
__vsync/shaders/: compile.sh
__vsync/shaders/glsl/: default.frag
__vsync/shaders/spirv/: default.frag.spv
common/: CMakeLists.txt
common/imgui_wrapper/: CMakeLists.txt
common/imgui_wrapper/include/: imgui_wrapper.hpp
common/imgui_wrapper/src/: imgui_wrapper.cpp
common/vk_core/: CMakeLists.txt
common/vk_core/include/: vk_core.hpp
common/vk_core/src/: vk_core.cpp
